apps/archive/ofnir/actualbudget/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: actualbudget
  namespace: ofnir-actualbudget
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  parentRefs:
    - name: gateway-internal
      namespace: envoy-gateway-system
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - budget.ofnir.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: actualbudget
          port: 5006
          group: ""
          kind: Service
          weight: 1
